# friday-builder

./: Cargo.toml  README.md
config/: config.yml
config/jobs/: sample.yml
src/: config.rs  job.rs  main.rs
