[package]
name = "friday"
version = "1.0.0"
authors = ["Alexander Eremin"]
edition = "2021"

[dependencies]
yaml-rust = "0.4"
log = "0.4.11"
simplelog = "0.12.0"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.9"
colored = "2.0.0"
job_scheduler = "1.2.1"
chrono = "0.4.31"
duct = "0.13.6"
walkdir = "2.4.0"
regex = "1.10.2"
