[package]
name = "friday-builder"
version = "1.0.0"
edition = "2021"
authors = ["Alexander Eremin <alexander.r.eremin@gmail.com>"]
description = "Simple console analog of jenkins, written in Rust"
homepage = "https://github.com/alhazred/friday"
repository = "https://github.com/alhazred/friday"
readme = "README.md"
license = "GPL-3.0"
keywords = ["jenkins", "crontab", "ci", "build"]

[dependencies]
yaml-rust = "0.4"
log = "0.4.11"
simplelog = "0.12.0"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.9"
colored = "1.9.4"
job_scheduler = "1.2.1"
chrono = "0.4.31"
duct = "0.13.6"
walkdir = "2.4.0"
regex = "1.10.2"
